--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.babylonjs.com/loaders/babylon.glTF2FileLoader.min.js"></script>
 
   <!-- CSS Style -->
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <canvas id="renderCanvas"></canvas>
@@ -38,6 +38,6 @@
   </div>
 
   <!-- Main JS -->
-  <script src="/scripts/showroom.js" defer></script>
+  <script src="./scripts/showroom.js" defer></script>
 </body>
 </html>
